web/static/css/app.scss
$text-color: #5D4037;
$navbar-default-bg: #3E2723;
$navbar-default-brand-color: white;
$navbar-default-color: white;
@import "bootstrap";
@import url(https://fonts.googleapis.com/css?family=Roboto:400,700|Roboto+Condensed:400);

html, body {
	font-family: 'Roboto', sans-serif;
	min-height: 100%;

	@media (min-width: 768px) {
		height: 100%;
	}
}

input, button {
	font-family: 'Roboto', sans-serif;
}

h1, h2, h3, h4, h5, h6 {
	font-family: 'Roboto Condensed', sans-serif;
	font-weight: 400;
}

@media (max-width: 768px) {
	h1 { font-size: floor(($font-size-base * 1.7)); }
	h2 { font-size: floor(($font-size-base * 1.25)); }
}

body {
	padding-top: 0;

	@media (min-width: 768px) {
		display: flex;
		padding-top: 70px;
	}
}

main {
	@media (min-width: 768px) {
		display: flex;
		flex: 1 0 auto;
		overflow-y: auto;
		flex-wrap: wrap;
		justify-content: center;
		align-content: flex-start;
		max-width: 1200px;
                margin: auto;
		-webkit-overflow-scrolling: touch;

		&.vertical {
			display: block;
		}
	}
}

#pseudo-body {
	@media (min-width: 768px) {
		flex: 1 0 auto;
		display: flex;
		flex-direction: column;
		align-items: stretch;
                
	}
}

#sign-up-error {
	font-size: floor(($font-size-base * 1.25));
	padding-right: 1em;
}

.super-yellow {
	background: radial-gradient(ellipse at 75% 75%, #FFECB3 20%, #FFFDE7 100%);
}

.navbar-form {
	border-bottom: 0;
	margin-top: 0;
	color: $navbar-default-color;

	label {
		padding-right: 0em;
		font-weight: 400;
		letter-spacing: .1em;
	}

	@media (min-width: 768px) {
		margin-top: 8px;
	}
}

.title-y {
	text-transform: uppercase;
}

.one, .two {
	padding: 1em;

	h2 {
		margin-bottom: 0;
	}

	h1 {
		margin-top: 0;
	}
}

.two {
	flex: 2 0 68%;
}

.one {
	flex: 1 0 34%;
}

.content {
	display: flex;
	align-items: stretch;

	&.left {
		@media (min-width: 768px) {
			.copy { padding-left: 1em; }
		}
	}

	&.right {
		@media (min-width: 768px) {
			.img {
				order: 2;
			}

			.copy {
				padding-left: 0;
				order: 1;
				padding-right: 1em;
			}
		}
	}
}

.img {
	flex: 1 0 100px;
	background-color: $gray-lighter;
	display: none;

	@media (min-width: 768px) {
		display: block;
	}
}

.copy {
	flex: 3 1 auto;
}

.middle-of-the-road {
	flex: 1 0 768px;
	max-width: 768px;
}

.bigger {	 
	text-transform: uppercase;
}

.padded-when-small {
	padding-left: 1em;
	padding-right: 1em;
}

.navbar-header .link {
  display: inline-block;
}

.naked-list {
  list-style: none;
  padding-left: 0;
}

